plugins {
    id 'java'
    id 'idea'
    id 'io.papermc.paperweight.userdev' version '1.5.5'
}

sourceCompatibility = 17
targetCompatibility = 17

group 'net.njsharpe'
version '1.0.0'

jar {
    archiveFileName = "${rootProject.name}.jar"
    archiveVersion = null
}

repositories {
    mavenCentral()
}

dependencies {
    paperweight.paperDevBundle('1.19.4-R0.1-SNAPSHOT')
    implementation 'org.jetbrains:annotations:23.0.0'
}